[tool.poetry]
name = "aoc"
version = "0.1.0"
description = ""
authors = ["Alexander Hultnér <ahultner@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pytest-xdist = "^2.2"
pytest-cov = "^2.10.1"
pytest-tldr = "^0.2.2"
toolz = "^0.11.1"
more_itertools = "^8.6"
bpython = "^0.20.1"
hypothesis = "^5.43.4"
pydantic = "^1.7.3"
multiprocess = "^0.70.11"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
black = "^20.8b1"
mypy = "^0.790"
flake8 = "^3.8.4"
isort = "^5.6.4"
autoflake = "^1.4"
jupyterlab = "^3.0.0"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
